<resources>
    <string name="app_name">Trivia</string>
    <string name="_1_000">1,000</string>
    <string name="_1_000_000">1,000,000</string>
    <string name="_100">100</string>
    <string name="_125_000">125,000</string>
    <string name="string_125_000" />
    <string name="_16_000">16,000</string>
    <string name="_2_000">2,000</string>
    <string name="_250">250</string>
    <string name="_32_000">32,000</string>
    <string name="_4_000">4,000</string>
    <string name="_500">500</string>
    <string name="_500_000">500,000</string>
    <string name="_64_000">64,000</string>
    <string name="_8_000">8,000</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="start">Start</string>
    <string name="true_false">True/False</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
