<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/main_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="gal.trivia.MainActivity">


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:drawable/btn_dropdown" />

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/spinner"
        android:background="#80FFFFFF"
        android:id="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        >

        <RadioButton
            android:id="@+id/btn_mutliple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="@string/multiple_choice"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/btn_tf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="@string/true_false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start" />

</RelativeLayout>
